--- a/Orlando-city/assets/css/variables.css
+++ b/Orlando-city/assets/css/variables.css
@@ -10,4 +10,7 @@
     --text-color: #fff;
 
     --black-color: #161617;
+
+    --balck50-color: rgba(21, 22, 23, .5);
+    --white10-color: rgba(255, 255, 255, .1);
 }
