--- a/Orlando-city/assets/css/button.css
+++ b/Orlando-city/assets/css/button.css
@@ -7,6 +7,8 @@
     border: none;
     outline: none;
     text-decoration: none;
+    justify-content: center;
+    align-items: center;
 
     /* Borda arredondada nos 4 pixels */
     border-radius: 4px;
