--- a/Orlando-city/assets/css/hero.css
+++ b/Orlando-city/assets/css/hero.css
@@ -121,4 +121,26 @@
             }
         }
     }
+    @media (min-width: 992px) {
+        > section {
+            background-color: transparent;
+            height: calc(100vh - 110px);
+            justify-content: center;
+
+            > div {
+                > h1 {
+                    font-size: 86px;
+                    max-width: 800px;
+                    line-height: 86px;
+                }
+                > p {
+                    font-size: 22px;
+                    max-width: 800px;
+                }
+                .buttons {
+                    flex-direction: row;
+                }
+            }
+        }
+    }
 }
