--- a/Orlando-city/assets/css/variables.css
+++ b/Orlando-city/assets/css/variables.css
@@ -11,6 +11,6 @@
 
     --black-color: #161617;
 
-    --balck50-color: rgba(21, 22, 23, .5);
+    --black50-color: rgba(21, 22, 23, .5);
     --white10-color: rgba(255, 255, 255, .1);
 }
